--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.91.0",
     "idb": "^8.0.0",
     "leaflet": "^1.9.4",
     "vue": "^3.4.0"
