V6 Upgrade: Dynamic Forms, Map Fixes, Team Tracking

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@supabase/supabase-js": "^2.91.0",
     "idb": "^8.0.0",
     "leaflet": "^1.9.4",
-    "vue": "^3.4.0"
+    "vue": "^3.4.0",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
